--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,8 +7,8 @@
     <div class="largetext">
       <h1>Capture the moments that take your breath away</h1>
       <div class="button">
-        <div class="btn btn-primary">
-          <button> <%= link_to "Login with Instagram", oauth_connect_path %> </button>
+        <div class="btn btn-success">
+          <%= link_to "Login with Instagram", oauth_connect_path %>
         </div>
       </div>
     </div>
