--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -2,6 +2,8 @@
   <div class="row">
     <div class="jumbotron">
   <h1>Welcome, <%=  @username.username %>!</h1>
+  <%=@username.['profile_picture']['url'] %>
+
 
     </div>
 
