--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,14 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="jumbotron">
+     <%= @profilepic.inspect %>
   <h1>Welcome, <%=  @current_user.username %>!</h1>
-
-
-
     </div>
-
-
-
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -18,33 +13,55 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">Add an Event</h4>
       </div>
-      <div class="modal-body ">
+      <div class="modal-body">
 
 
 
           <%= bootstrap_form_tag url: show_path do |f| %>
           <%= f.text_field :event, label: "Name your event", placeholder: "Martin Hopkins Wedding"%>
           <%= f.text_field :q, label: "Search a hashtag below", placeholder: "example - Usher" %>
-          <%= f.primary "Search", :class => "btn btn-success" %>
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <%= f.primary "Add", :class => "btn btn-primary" %>
+          <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
         <% end %>
       </div>
 
     </div>
   </div>
+
 </div>
 
-<div class="dashed">
-  <h2>You have no events</h2>
-  <% @events.each do |e| %>
-    <%= e.hashtag %>
-  <% end %>
-<div class="addbutton"
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-success btn-lg glyphicon glyphicon-plus" data-toggle="modal" data-target="#myModal">
- Event
-</button>
+
+<div class="eventrow">
+  <h2>Events</h2>
+
+
+    <div class="addbutton">
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-success btn-lg glyphicon glyphicon-plus" data-toggle="modal" data-target="#myModal">
+      </button>
+    </div>
+
+
 </div>
+
+<div class="row well">
+
+  <% @events.each do |e| %>
+    <div class="eventboard col-md-4">
+     <h1 class="eventname">
+     <%= link_to e.name, e %>
+     </h1>
+     <br>
+     <br>
+     <br>
+     <br>
+     <h3 class="hashtagevent">
+     #<%= link_to e.hashtag, e %>
+     </h3>
+
+    </div>
+  <% end %>
+
 </div>
 
 </div>
