--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,123 @@
 
-<div class="container">
-  <div class="row">
-  <body class="bgimg">
-  <div class="mainbox">
-   </div>
-    <div class="largetext">
-      <h1>Capture the moments that take your breath away</h1>
-      <div class="button">
-        <div class="btn btn-success">
-          <%= link_to "Login with Instagram", oauth_connect_path %>
-        </div>
+
+<section id="home" data-type="background" data-speed="10" class="pages">
+  <article>I am absolute positioned</article>
+    <div class="mainbox">
+    </div>
+      <div class="largetext">
+        <h1>Capture the moments that take your breath away</h1>
+        <div class="button">
+          <div class="btn btn-success">
+            <%= link_to "Login with Instagram", oauth_connect_path %>
+          </div>
+      </div>
+</section>
+
+<div class="row">
+  <section id="about" data-type="background" data-speed="10" class="pages">
+    <h1>How it Works </h1>
+    <div class="col-md-4">
+      <div class="panel panel-primary">
+       <div class="panel-heading">
+         <h3 class="panel-title">Login and Register with Instagram</h3>
+    </div>
+      <div class="panel-body">
+      <img src="https://pbs.twimg.com/profile_images/1550954462/instagramIcon_400x400.png" class="instagramicon">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    <!-- Gain quick access to PicPatter by connecting your Instagram account. -->
       </div>
     </div>
+</div>
 
-  </body>
+
+<div class="row">
+<div class="col-md-4">
+  <div class="panel panel-success">
+    <div class="panel-heading">
+      <h3 class="panel-title">Start Adding Events</h3>
+    </div>
+    <div class="panel-body">
+    <img src="https://pbs.twimg.com/profile_images/1550954462/instagramIcon_400x400.png" class="instagramicon">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+    </div>
   </div>
 </div>
 
+
+<div class="row">
+<div class="col-md-4">
+  <div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title">View and Share with friends!</h3>
+  </div>
+  <div class="panel-body">
+    <img src="https://pbs.twimg.com/profile_images/1550954462/instagramIcon_400x400.png" class="instagramicon">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+  </div>
+</div>
+</div>
+
+</div>
+</div>
+</div>
+  </section>
+
+  <section id="secondimage" data-type="background" data-speed="10" class="pages">
+         <article></article>
+    </section>
+
+
+  <section id="ourteam" data-type="background" data-speed="10" class="pages">
+    <article><h1>Our Team</h1></article>
+      <div class="row">
+        <div class="teampic col-md-4">
+          <img src="assets/teampic.png">
+        </div>
+        <div class="teaminfo col-md-8 col-md-offset-6">
+          <h3 id="brenden">Brenden Martin</h3>
+            <p id="brendeninfo"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
+      </div>
+  </section>
+
+<footer class="site-footer">
+  Insert Footer content here
+</footer>
 
 
 
