--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,14 +22,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand icon" href="http://localhost:3000"><img src="assets/picpatter.png"></a>
+      <a class="navbar-brand icon" href="http://localhost:3000"><img src="assets/picpatter.png"><h1 class="logotitle">PicPatter</h1></a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav pull-right">
-        <li class="active"><a href="#">How it Works <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="active"><a href="#about">How it Works <span class="sr-only">(current)</span></a></li>
+        <li><a href="#ourteam">Our Team</a></li>
+        <li><a href="#contact">Contact</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
