--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,8 +1,12 @@
 <div class="container">
   <div class="row">
+
+  <!-- Header section inside jumbotron -->
     <div class="jumbotron">
-     <%= @profilepic.inspect %>
-  <h1>Welcome, <%=  @current_user.username %>!</h1>
+      <div class="userprofile">
+        <%= image_tag @profile_picture%>
+      </div>
+      <h1>Welcome, <%=  @current_user.username %>!</h1>
     </div>
 
 <!-- Modal -->
@@ -14,9 +18,6 @@
         <h4 class="modal-title" id="myModalLabel">Add an Event</h4>
       </div>
       <div class="modal-body">
-
-
-
           <%= bootstrap_form_tag url: show_path do |f| %>
           <%= f.text_field :event, label: "Name your event", placeholder: "Martin Hopkins Wedding"%>
           <%= f.text_field :q, label: "Search a hashtag below", placeholder: "example - Usher" %>
@@ -30,39 +31,35 @@
 
 </div>
 
-
-<div class="eventrow">
-  <h2>Events</h2>
-
-
-    <div class="addbutton">
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-success btn-lg glyphicon glyphicon-plus" data-toggle="modal" data-target="#myModal">
-      </button>
+<!-- Above the well includes Event title and Add Event Button -->
+    <div class="eventrow">
+      <h2>Events</h2>
+        <div class="addbutton">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-success btn-md glyphicon glyphicon-plus" data-toggle="modal" data-target="#myModal">
+          </button>
+        </div>
     </div>
 
-
-</div>
-
-<div class="row well">
-
-  <% @events.each do |e| %>
-    <div class="eventboard col-md-4">
-     <h1 class="eventname">
-     <%= link_to e.name, e %>
-     </h1>
-     <br>
-     <br>
-     <br>
-     <br>
-     <h3 class="hashtagevent">
-     #<%= link_to e.hashtag, e %>
-     </h3>
+<!-- Adds and event board for each event that is added -->
+    <div class="row well">
+      <% @events.each do |e| %>
+        <div class="eventboard col-md-4">
+         <h1 class="eventname">
+         <%= link_to e.name, e %>
+         </h1>
+         <br>
+         <br>
+         <br>
+         <br>
+         <h3 class="hashtagevent">
+         #<%= link_to e.hashtag, e %>
+         </h3>
+         <%= link_to '', e, :method=>:delete, :class=>'glyphicon glyphicon-remove-sign' %>
+        </div>
+      <% end %>
 
     </div>
-  <% end %>
 
-</div>
-
-</div>
-</div>
+  </div> <!--Row div-->
+</div><!--Container div -->
