--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -8,6 +8,9 @@
 
 
   </div>
+    <div class ="backbutton">
+    <button type="button" class="btn btn-success btn-md glyphicon glyphicon-arrow-left"> <%= link_to 'Back', user_index_path %></button>
+    </div>
 
     <div class="well">
       <% @tags.each do |item| %>
