--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,10 +19,10 @@
     <div class="col-md-4">
       <div class="panel panel-primary">
        <div class="panel-heading">
-         <h3 class="panel-title">Login and Register with Instagram</h3>
+         <h2 class="panel-title">Login and Register with Instagram</h2>
     </div>
       <div class="panel-body">
-      <img src="https://pbs.twimg.com/profile_images/1550954462/instagramIcon_400x400.png" class="instagramicon">
+      <img src="assets/instagramicon.png" class="instagramicon">
       <br>
       <br>
       <br>
@@ -46,7 +46,7 @@
       <h3 class="panel-title">Start Adding Events</h3>
     </div>
     <div class="panel-body">
-    <img src="https://pbs.twimg.com/profile_images/1550954462/instagramIcon_400x400.png" class="instagramicon">
+    <img src="assets/event.png" class="instagramicon">
       <br>
       <br>
       <br>
@@ -70,7 +70,7 @@
     <h3 class="panel-title">View and Share with friends!</h3>
   </div>
   <div class="panel-body">
-    <img src="https://pbs.twimg.com/profile_images/1550954462/instagramIcon_400x400.png" class="instagramicon">
+    <img src="assets/share.png" class="instagramicon">
       <br>
       <br>
       <br>
