updating events show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav pull-right">
-        <li class="active"><a href="#about">How it Works <span class="sr-only">(current)</span></a></li>
+        <li class=""><a href="#about">How it Works <span class="sr-only">(current)</span></a></li>
         <li><a href="#ourteam">Our Team</a></li>
         <li><a href="#contact">Contact</a></li>
         <!-- <li class="dropdown">
