--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="jumbotron">
+    <%= social_share_button_tag ("PicPatter") %>
       <h1 class="eventname">
         <%= @event.name %>
       </h1>
