--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -116,7 +116,7 @@
   </section>
 
 <footer class="site-footer">
-  Insert Footer content here
+  <%= social_share_button_tag ("PicPatter") %>
 </footer>
 
 
