--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="jumbotron">
-    <%= social_share_button_tag ("PicPatter") %>
+
       <h1 class="eventname">
         <%= @event.name %>
       </h1>
@@ -11,11 +11,15 @@
       </h2>
     </div>
 
+
     <div class ="backbutton">
+
     <button type="button" class="btn btn-success btn-md glyphicon glyphicon-arrow-left"> <%= link_to 'Back', user_index_path %></button>
+
     </div>
 
     <div class="well">
+    <div id="socialicons"> <%= social_share_button_tag ("PicPatter") %></div>
      <% @tags.each do |t| %>
      <%= image_tag t['images']['low_resolution']['url'] %>
       <% end %>
