--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,9 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav pull-right">
-        <li class=""><a href="#about">How it Works <span class="sr-only">(current)</span></a></li>
-        <li><a href="#ourteam">Our Team</a></li>
-        <li><a href="#contactimage">Contact</a></li>
+        <li class=""><%= link_to 'How it Works', root_path%> <span class="sr-only">(current)</span></a></li>
+        <li><%= link_to 'Our Team', root_path%></a></li>
+        <li><%= link_to 'Contact', root_path%></a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
