--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -23,7 +23,8 @@
 }
 /*How it Works section*/
 #about {
-  background: url("http://cdn.spafinder.com/iStock_000016396348Medium.jpg") 50% 0 no-repeat min-height: 700px;
+  background: url("http://cdn.spafinder.com/iStock_000016396348Medium.jpg") 50% 0 no-repeat;
+  min-height: 700px;
   height: 700px;
   margin: 0 auto;
   width: 100%;
@@ -52,7 +53,7 @@
 }
 /*OUR TEAM SECTION*/
 #ourteam {
-   background: url("http://cdn.spafinder.com/iStock_000016396348Medium.jpg") 50% 0 no-repeat min-height: 700px;
+   background: url("http://cdn.spafinder.com/iStock_000016396348Medium.jpg") 50% 0 no-repeat; min-height: 700px;
    height: 700px;
   margin: 0 auto;
   width: 100%;
