--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand icon" href="http://localhost:3000"><img src="/assets/picpatter.png"><h1 class="logotitle">PicPatter</h1></a>
+      <%= image_tag ('picpatter.png') %><h1 class="logotitle">PicPatter</h1>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
