error loading, moving back icon status

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= image_tag ("picpatter.png", size: "70x70") %><h1 class="logotitle">PicPatter</h1>
+      <%= image_tag ("picpatter.png") %><h1 class="logotitle">PicPatter</h1>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
