fixed icon and logo title

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -2,14 +2,14 @@
 .icon img {
   height:70px;
   width: 70px;
-  margin-top: -23px;
+
 }
 
 .logotitle {
   position: fixed;
   margin-left: 80px;
   margin-top: -60px;
-
+  color: white;
 }
 
 /*background image on home page*/
