--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,10 +32,10 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav pull-right">
-        <li class=""><%= link_to 'How it Works', root_path%> <span class="sr-only">(current)</span></a></li>
-        <li><%= link_to 'Our Team', root_path%></a></li>
-        <li><%= link_to 'Contact', root_path%></a></li>
-
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'How it Works', root_path %></li>
+        <li><%= link_to 'Our Team', root_path %></li>
+        <li><%= link_to 'Contact', root_path %></li>
         </li>
       </ul>
 
