--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,6 +32,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav pull-right">
+        <li><%= link_to 'Home', root_path %></li>
         <li class=""><a href="#about">How it Works <span class="sr-only">(current)</span></a></li>
         <li><a href="#ourteam">Our Team</a></li>
         <li><a href="#contactimage">Contact</a></li>
