fixed all photos on front besides social icons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,7 +84,8 @@
          <h2 class="panel-title">1. Login and Register with Instagram</h2>
     </div>
       <div class="panel-body">
-      <img src="assets/instagramicon.png" class="instagramicon">
+
+      <%= image_tag("instagramicon.png", class: "instagramicon") %>
       <br>
       <br>
       <br>
@@ -108,7 +109,7 @@
       <h3 class="panel-title">2. Start Adding Events</h3>
     </div>
     <div class="panel-body">
-    <img src="assets/event.png" class="instagramicon">
+    <%= image_tag("event.png", class: "instagramicon") %>
       <br>
       <br>
       <br>
@@ -132,7 +133,8 @@
     <h3 class="panel-title">3. View and Share with friends!</h3>
   </div>
   <div class="panel-body">
-    <img src="assets/share.png" class="instagramicon">
+  <%= image_tag("share.png", class: "instagramicon") %>
+
       <br>
       <br>
       <br>
@@ -167,7 +169,8 @@
     <article><h1>Our Team</h1></article>
       <div class="row">
         <div class="teampic col-md-4">
-          <img src="assets/teampic.png">
+        <%= image_tag("teampic.png", class: "teampic") %>
+
         </div>
         <div class="teaminfo col-md-8 col-md-offset-6">
           <h3 id="brenden">Brenden Martin</h3>
