icon navigation now redirects to root path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <div class="icon"><%= image_tag ("picpatter.png") %>
-        <h1 class="logotitle">PicPatter</h1>
+        <a href="http://picpatter.heroku.com">
+      <div class="icon"><%= image_tag ("picpatter.png") %>
+        <h1 class="logotitle">PicPatter</h1></a>
       </div>
     </div>
 
