--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,8 +25,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <a href="http://picpatter.heroku.com">
       <div class="icon"><%= image_tag ("picpatter.png") %>
-        <h1 class="logotitle">PicPatter</h1>
+        <h1 class="logotitle">PicPatter</h1></a>
       </div>
     </div>
 
