--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
- <link rel="shortcut icon" href="assets/favicon.ico" />
+ <link rel="shortcut icon" href="assets/favicon.ico" />(favicon_link_tag)
 </head>
 
 <body>
