--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,7 +30,7 @@
   width: 50px;
   height: 50px;
   border-radius: 150px;
-  background: url("/assets/facebook.png") no-repeat;
+  background: url("http://pizzainmotion.boardingarea.com/wp-content/uploads/2014/11/facebook-icon-50x50.jpg") no-repeat;
   border: 2px solid white;
  }
 
@@ -39,7 +39,7 @@
 
   width: 50px;
   height: 50px;
-  background: url("/assets/pinterest.png") no-repeat;
+  background: url("http://www.sonsofprophecy.com/wp-content/uploads/2013/07/Pinterest-50x50.png") no-repeat;
   border-radius: 150px;
   background-color:white;
 
@@ -50,7 +50,7 @@
 
   width: 50px;
   height: 50px;
-  background: url("/assets/twitter.png") no-repeat;
+  background: url("http://fairfaxgop.org/wp-content/uploads/2014/05/Twitter-Icon.png") no-repeat;
   border-radius: 150px;
   background-color: white;
 
