session id was defaultd to ENV

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="well">
-
+    <div id="socialicons"> <%= social_share_button_tag ("PicPatter") %></div>
      <% @tags.each do |t| %>
      <%= image_tag t['images']['low_resolution']['url'] %>
       <% end %>
