fixed home page images to show more zoomed out

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -14,7 +14,7 @@
 
 /*background image on home page*/
 #home {
-  background: url("http://www.jamesferrara.com/data/photos/3644_1destination_photography__55.jpg") 100% 0 repeat fixed; min-height: 1000px;
+  background: url("http://www.jamesferrara.com/data/photos/3644_1destination_photography__55.jpg") 50% 0 repeat fixed; min-height: 1000px;
   height: 1000px;
   margin: 0 auto;
   width: 100%;
@@ -93,7 +93,7 @@
 
 /*CONTACT SECTION*/
 #contactimage {
-  background: url("http://www.woodlandsdancelessons.com/uploads/pages/page_52/Wedding_Dance.jpg") 100% 0 repeat fixed; min-height: 500px;
+  background: url("http://elegantevententertainment.com/wp-content/uploads/2012/02/ScaringeWedding-5362-Jason-Joness-conflicted-copy-2012-01-281.jpg") 50% 0 no-repeat fixed; min-height: 500px;
   height: 500px;
   margin: 0 auto;
   width: 100%;
@@ -300,3 +300,5 @@ h1 {
 .contactform {
   margin-top: 100px;
 }
+
+
