--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -166,7 +166,7 @@
 
 
   <section id="ourteam" data-type="background" data-speed="10" class="pages">
-    <article><h1>Our Team</h1></article>
+    <article><h1 class="line">Our Team</h1></article>
       <div class="row">
         <div class="teampic col-md-4">
         <%= image_tag("teampic.png", class: "teampic") %>
